# server1/routes/group.js
@@ -53,7 +53,7 @@ knl.patch('group/:id', async(req,resp)=>{
         id:req.params.id
         }
     });
-    resp.json(result);
+    resp.json({"status":"OK"});
     resp.end();
 })
 knl.put('group', async(req, resp) => {
@@ -69,12 +69,3 @@ knl.put('group', async(req, resp) => {
     resp.end();
     
 });
-knl.delete('group/:id', async(req,resp)=>{
-    const result = await knl.sequelize().models.Group.destroy({
-        where:{
-            id: req.params.id
-        }
-    });
-    resp.json({"status":"OK"});
-    resp.end();
-})
